test/sematest/valid/main_as_identifier.java
class main {
  public main main;
  public static void main(String[] args) {
    int main = 4;
    new main().main(new main());
    (new main().main = new main()).main(new main().main(new main()));
  }
  public main main(main main){
    return main(main(main));
  }
}