test/sematest/invalid/shadowed_parameter.java
class Test {
  public int test(int param) {
    int param;
  }
}
